# casaverde

./: .gitignore  Cargo.toml  README.md  build.sh  build_test.sh  common.sh  simulation.sh  simulation_test.sh
casaverde/: casaverde design map.canvas
casaverde/.obsidian/: workspace.json
casaverde/Casaverde/: Casaverde.md
casaverde/Casaverde Design Concepts/: Casaverde Design Concept.md  Casaverde Prototype.md  casaverde design map.canvas
casaverde/Casaverde Design Concepts/models/T-Frame/: 5363K21_Easy-Fit Barbed Hose Fitting.STEP
casaverde/Casaverde/casaverde_app/: casaverde_app.md
casaverde/Casaverde/casaverde_app/app.rs/: app.rs.md
casaverde/Casaverde/casaverde_app/app.rs/methods/: run_app.md  switch_screen.md
casaverde/Casaverde/casaverde_app/devices.rs/methods/: new.md
casaverde/Casaverde/casaverde_app/devices.rs/structs/: DeviceConfig.md  DeviceConfigRoot.md
casaverde/Casaverde/casaverde_app/main.rs/: main.rs.md
casaverde/Casaverde/casaverde_app/main.rs/methods/: main.md
casaverde/Casaverde/casaverde_app/sensors.rs/: sensors.rs.md
casaverde/Casaverde/casaverde_app/sensors.rs/methods/: new.md  toggle_sensor.md  update_temperatures.md
casaverde/Casaverde/casaverde_app/tui.rs/: tui.rs.md
casaverde/Casaverde/casaverde_app/ui.rs/: ui.rs.md
casaverde/Casaverde/casaverde_controller/: casaverde_controller.md  lib.rs.md
casaverde/Casaverde/casaverde_controller/client.rs/methods/: fetch_readings.md
casaverde/Casaverde/casaverde_controller/serial.rs/: serial.rs.md
casaverde/Casaverde/casaverde_server/: casaverde_server.md
casaverde/Casaverde/casaverde_server/cache.rs/: cache.rs.md
casaverde/Casaverde/casaverde_server/main.rs/: main.rs.md
casaverde/assets/pictures/: casaverde_logo.xcf
casaverde_app/: Cargo.toml  build.sh  config.toml  server.crt
casaverde_app/casaverde_vault/.obsidian/: workspace.json
casaverde_app/casaverde_vault/casaverde/Home/: Table of Contents.md
casaverde_app/casaverde_vault/casaverde/Section I/: Sensors.md
casaverde_app/scripts/: launch-casaverde  xinitrc
casaverde_app/src/: app.rs  client.rs  devices.rs  lib.rs  main.rs  models.rs  sensors.rs  touch.rs  tui.rs  ui.rs
casaverde_controller/: Cargo.toml  build.sh  config.toml  server.crt
casaverde_controller/arduino/: casaverde_relay_control.ino  casaverde_relay_control_1.ino  sketch.ino
casaverde_controller/arduino/relay_test/: relay_test.ino
casaverde_controller/arduino/temp_test/: temp_test.ino
casaverde_controller/src/: client.rs  config.rs  controller.rs  gpio.rs  lib.rs  main.rs  models.rs  sensors.rs  serial.rs  timer.rs
casaverde_firmware/: Cargo.toml
casaverde_firmware/arduino/dumb_control/: dumb_control.ino
casaverde_firmware/arduino/relay_control_002/: relay_control_002.ino
casaverde_firmware/arduino/relay_control_003/: relay_control_003.ino
casaverde_firmware/asm/: casaverde_atmega328p.asm
casaverde_firmware/src/: lib.rs
casaverde_lazy/: Cargo.toml
casaverde_lazy/src/: lib.rs
casaverde_log/: Cargo.toml
casaverde_log/src/: level.rs  lib.rs  logger.rs  timestamp.rs
casaverde_obsidian/: notes.md
casaverde_obsidian/.obsidian/: workspace.json
casaverde_obsidian/Casaverde/: casaverde.md  dataflow.md  performance.md
casaverde_obsidian/Casaverde Design Concepts/: Automation Ideas.md  Casaverde Design Concept.md  TO DO.md  casaverde design map.canvas
casaverde_obsidian/Casaverde Design Concepts/models/T-Frame/: 47065T31_T-Slotted Framing - 47065T31_T-Slotted Framing.stl  47065T333_T-Slotted Framing - 47065T333_T-Slotted Framing.stl  48925K304_Standard-Wall Unthreaded Rigid PVC Pipe for Water - 48925K304_Standard-Wall Unthreaded Rigid PVC Pipe for Water.stl  5 inch net cup (1).stl  5278N45_Self-Aligning T-Slotted Framing Nuts.stl  84825K85_Plastic Wall Panel - 84825K85_Plastic Wall Panel.stl  Base-T30-ABL.stl  Base-T30-ABR.stl  Base-T90-A.stl  Base-T90-B.stl
casaverde_obsidian/Casaverde/casaverde_app/: casaverde_app.md
casaverde_obsidian/Casaverde/casaverde_app/app.rs/: app.rs.md
casaverde_obsidian/Casaverde/casaverde_app/app.rs/enums/: Screen.md
casaverde_obsidian/Casaverde/casaverde_app/app.rs/methods/: move_down.md  move_up.md  quit.md  run_app.md
casaverde_obsidian/Casaverde/casaverde_app/app.rs/structs/: CasaverdeApp.md
casaverde_obsidian/Casaverde/casaverde_app/devices.rs/: devices.rs.md
casaverde_obsidian/Casaverde/casaverde_app/devices.rs/structs/: DeviceConfigRoot.md  DeviceData.md  DeviceReading.md  SensorReading.md
casaverde_obsidian/Casaverde/casaverde_app/main.rs/: main.rs.md
casaverde_obsidian/Casaverde/casaverde_app/touch.rs/: touch.rs.md
casaverde_obsidian/Casaverde/casaverde_controller/client.rs/: client.rs.md
casaverde_obsidian/Casaverde/casaverde_controller/config.rs/: config.rs.md
casaverde_obsidian/Casaverde/casaverde_controller/controller.rs/: controller.rs.md
casaverde_obsidian/Casaverde/casaverde_controller/main.rs/: main.rs.md
casaverde_obsidian/Casaverde/casaverde_server/handlers.rs/: handlers.rs.md
casaverde_obsidian/Casaverde/casaverde_server/models.rs/: models.rs.md
casaverde_obsidian/Research/: PMC11688204_nih.md  PMC7885021.md
casaverde_obsidian/assets/pictures/: casaverde_logo.xcf
casaverde_server/: Cargo.toml  build.sh  config.toml  setup.sh
casaverde_server/src/: cache.rs  handlers.rs  lib.rs  main.rs  models.rs
casaverde_sim/: Cargo.toml  casaverde_automate.py  casaverde_automate_debug.py  casaverde_sim.md  casaverde_sim.py  casaverde_sim_1.py  casaverde_sim_2.py  config.toml  simulation.sh  simulation_2.sh  simulation_3.sh  socat.md
casaverde_sim/py/: simulation.py  simulation_3.py  simulation_4.py
casaverde_sim/src/: lib.rs  main.rs  sim.rs
casaverde_time/: Cargo.toml
casaverde_time/src/: formatted.rs  lib.rs  timer.rs  timestamp.rs
casaverde_ui/: Cargo.toml
casaverde_ui/casaverde_vault/.obsidian/: workspace.json
casaverde_ui/src/: main.rs
casaverde_utils/: Cargo.toml
casaverde_utils/src/: dirs.rs  fs.rs  io.rs  lib.rs  log.rs  logger.rs  path.rs  time.rs  uuid.rs
examples/python/: timer.py
(+31 files in other folders)
