# /casaverde/Cargo.toml

[workspace]
members = [
    "casaverde_app",
    "casaverde_controller",
    "casaverde_server",
    "casaverde_utils",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
authors = ["Acris Software Ltd. Co."]
edition = "2024"

[workspace.dependencies]
log = "0.4.22"
env_logger = "0.11.5"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"], default-features = false }
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["v4"] }
serialport = "4.7.3" # 4.5.0
rustls = "0.23.13"
rustls-pemfile = "2.1.3"
rustls-pki-types = "1.8.0"
axum = "0.7.5"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
dirs = "5.0.1"
lazy_static = "1.5.0"
clap = { version = "4.5.42", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
regex = "1.11.3"
chrono = "0.4.38"
