# Copyright 2025 Acris Software Ltd. Co. All Rights Reserved.
# github.com/cvusmo/casaverde/
# Cargo.toml - 

[workspace]
members = [
    "casaverde_app",
    "casaverde_controller",
    "casaverde_lazy",
    "casaverde_log",
    "casaverde_server",
    "casaverde_sim",
    "casaverde_test",
    "casaverde_time",
    "casaverde_utils",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
authors = ["Acris Software Ltd. Co."]
edition = "2024"

[workspace.dependencies]
#log = "0.4.22" # Scheduled for removal: Replaced by casaverde_log
#env_logger = "0.11.5" # Scheduled for removal: Replaced by casaverde_log
tokio = { version = "1.40.0", features = ["full"] } # Needed for async in casaverde_time, casaverde_app, etc.
serde = { version = "1.0.210", features = ["derive"] } # Needed for serialization in casaverde_app
serde_json = "1.0.128" # Needed for JSON in casaverde_app; consider std-only parser later
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"], default-features = false } # Needed for HTTP in casaverde_app; consider tokio-based alternative
toml = "0.8.19" # Needed for config parsing; consider std-only parser later
#uuid = { version = "1.10.0", features = ["v4"] } # Scheduled for removal: Replaced by casaverde_utils::uuid
serialport = "4.7.3" # Needed for casaverde_controller
rustls = "0.23.13" # Needed for TLS
rustls-pemfile = "2.1.3" # Needed for TLS
rustls-pki-types = "1.8.0" # Needed for TLS
axum = "0.7.5" # Needed for casaverde_server
axum-server = { version = "0.6.0", features = ["tls-rustls"] } # Needed for casaverde_server
#lazy_static = "1.5.0" # Scheduled for removal: Replace with std::sync::OnceLock
#clap = { version = "4.5.42", features = ["derive"] } # Scheduled for removal: Replace with std::env::args
crossterm = "0.29.0" # Needed for casaverde_app TUI
ratatui = "0.29.0" # Needed for casaverde_app TUI
#rand = "0.9.2" # Scheduled for removal: Not used
#twox-hash = "2.1.2" # Scheduled for removal: Not used
