# casaverde_app/Cargo.toml
[package]
name = "casaverde_app"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
crossterm.workspace = true
env_logger.workspace = true
log.workspace = true
ratatui.workspace = true
regex.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
serialport.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
casaverde_utils = { path = "../casaverde_utils" }

