# Copyright 2025 Acris Software Ltd. Co. All Rights Reserved.
# github.com/cvusmo/casaverde/casaverde_app
# Cargo.toml

[package]
name = "casaverde_app"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
casaverde_utils = { path = "../casaverde_utils" }

[[bin]]
name = "casaverde_app"
path = "src/main.rs"
