# casaverde_controller/Cargo.toml
[package]
name = "casaverde_controller"
version = "0.1.1"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serialport = "4.7.2"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
