# casaverde_controller/Cargo.toml

[package]
name = "casaverde_controller"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
env_logger.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serialport.workspace = true
tokio.workspace = true
toml.workspace = true
casaverde_utils = { path = "../casaverde_utils" }
rand.workspace = true

[[bin]]
name = "casaverde_controller"
path = "src/main.rs"
