[package]
name = "casaverde_server"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
env_logger = "0.11.8"
dirs = "6.0.0"
lazy_static = "1.5.0"
log = "0.4.27"
tokio = { version = "1.47.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
rustls-pemfile = "2.2.0"
