# Copyright 2025 Acris Software Ltd. Co. All Rights Reserved.
# Cargo.toml for casaverde_server

[package]
name = "casaverde_server"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
dirs = "5.0.1"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
reqwest = "0.12.8"
rustls = "0.23.13"
rustls-pemfile = "2.1.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
uuid = "1.10.0"
