# Copyright 2025 Acris Software Ltd. Co. All Rights Reserved.
# github.com/cvusmo/casaverde/casaverde_server
# Config.toml - 

[package]
name = "casaverde_server"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
axum-server.workspace = true
#dirs.workspace = true
#env_logger.workspace = true
lazy_static.workspace = true
log.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
casaverde_utils = { path = "../casaverde_utils" }

[[bin]]
name = "casaverde_server"
path = "src/main.rs"
