# Copyright 2025 Acris Software Ltd. Co. All Rights Reserved.
# github.com/cvusmo/casaverde/casaverde_sim
# Config.toml -

[package]
name = "casaverde_sim"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
casaverde_utils = { path = "../casaverde_utils" }
log = { workspace = true }

[[bin]]
name = "casaverde_sim"
path = "src/main.rs"

[lib]
name = "casaverde_sim"
path = "src/lib.rs"
