# Copyright 2025 Acris Software Ltd. Co. All Rights Reserved.
# github.com/cvusmo/casaverde/casaverde_utils
# Config.toml -

[package]
name = "casaverde_utils"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
env_logger.workspace = true
chrono.workspace = true
tokio.workspace = true
toml.workspace = true
serde_json.workspace = true

[lib]
name = "casaverde_utils"
path = "src/lib.rs"
