# Copyright 2025 Acris Software Ltd. Co. All Rights Reserved.
# github.com/cvusmo/casaverde/casaverde_utils
# Cargo.toml -

[package]
name = "casaverde_utils"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
casaverde_log = { path = "../casaverde_log" }
casaverde_time = { path = "../casaverde_time" }

[lib]
name = "casaverde_utils"
path = "src/lib.rs"
